MFB: Fixed bug #43276 (Incomplete fix for bug #42739, mkdir() under safe_mode).